First commit for Baby Notifier.

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,9 @@
 <% end %>
 
 <form id="enter_number" action="/register" method="POST">
-  <p>Enter your phone number:</p>
-  <p><input type="text" name="phone_number" id="phone_number" /></p>
-  <p><input type="submit" name="submit" value="Register" /></p>
+	<p><input type="text" name="name" id="name" /></p>
+  	<p>Enter your phone number:</p>
+  	<p><input type="text" name="phone_number" id="phone_number" /></p>
+  	<p><input type="checkbox" name="send_mms" id="send_mms" value="yes" /></p>
+  	<p><input type="submit" name="submit" value="Register" /></p>
 </form>
