--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,11 @@
-<% if @error == true %>
-  <p class="error">Please try again, there was an error generating your verification code!</p>
-<% end %>
+- if @error == true 
+  %p.error Please try again, there was an error generating your verification code!
 
-<form id="enter_number" action="/register" method="POST">
-	<p><input type="text" name="name" id="name" /></p>
-  	<p>Enter your phone number:</p>
-  	<p><input type="text" name="phone_number" id="phone_number" /></p>
-  	<p><input type="checkbox" name="send_mms" id="send_mms" value="yes" /></p>
+%form{:id => "enter_number", :action => "/register", :method =>"POST"}
+  %input{:type => "text", :name => "name", :id => "name", :placeholder => "name"}
+  %input{:type => "text", :name => "phone_number", :id => "phone_number", :placeholder => "phone number"}
+  %label{:for => "send_mms"} Would you like to see pictures of the adorable little baby?
+  %input{:type => "checkbox", :name => "send_mms", :id => "send_mms", :value="yes"}
+  %input{:type => "submit", :name => "submit", :value => "notify me :)"}
   	<p><input type="submit" name="submit" value="Register" /></p>
 </form>
