--- a/views/users.erb
+++ b/views/users.erb
@@ -12,6 +12,7 @@
   	<td><%= user.name %></td>
     <td><%= user.phone_number %></td>
     <td><%= user.send_mms %></td>
+    <td><%= user.verified %></td>
   </tr>
 <% end %>
 </table>
