--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,10 @@ body {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 22px;
   line-height: 24px;
-  background-image: url("/img/bg.gif"); }
+  background-image: url("/img/bg.gif");
+  position: absolute;
+  height: 100%;
+  width: 100%; }
 
 .logo {
   text-align: center;
@@ -17,3 +20,32 @@ body {
 
 .testing {
   text-align: right; }
+
+.hidden {
+  display: none; }
+
+input.code {
+  width: 80%; }
+
+.verifyCode {
+  position: relative; }
+  .verifyCode .button {
+    display: inline-block;
+    width: 240px;
+    font-size: 17px;
+    vertical-align: top;
+    height: 57px;
+    padding: 20px; }
+  .verifyCode input {
+    width: 260px;
+    display: inline-block; }
+  .verifyCode .alert-box.success {
+    position: absolute;
+    top: 0px;
+    width: 100%; }
+
+.logo {
+  color: #C1E3E5;
+  font-weight: 100;
+  font-size: 29px;
+  padding-top: 200px; }
