--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,9 +7,11 @@
     %link{:rel => "stylesheet", :href => "/css/foundation.css"}
     %link{:rel => "stylesheet", :href => "/css/main.css"}
     %script{ :type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"}
+    %script{ :type => "text/javascript", :src => "/js/register.js"}
   %body
     #wrapper
       .logo
+        babynotify.me
   
       #content  
         =yield  
