--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,8 @@
 !!!  
 %html  
   %head  
-    %title Baby Notifier  
+    %title Baby Notifier
+    %link{:rel => "icon", :type => "image/png", :href => "/img/favicon.png"}
     %link{:rel => "stylesheet", :href => "http://yui.yahooapis.com/2.8.0r4/build/reset/reset-min.css"}
     %link{:rel => "stylesheet", :href => "http://fonts.googleapis.com/css?family=Josefin+Sans:300,400", :type => "text/css"}
     %link{:rel => "stylesheet", :href => "/css/foundation.css"}
