--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,7 @@ body {
   line-height: 24px;
   background-image: url("/img/bg.gif");
   position: absolute;
-  height: 100%;
+  min-height: 100%;
   width: 100%; }
 
 .logo {
@@ -20,6 +20,14 @@ body {
 
 .testing {
   text-align: right; }
+
+.panel {
+  background: rgba(255, 255, 255, 0.3); }
+
+.panel.twilions {
+  text-align: center; }
+  .panel.twilions h2 {
+    font-family: 'Josefin Sans', sans-serif; }
 
 .hidden {
   display: none; }
