Added icons for nav.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,3 +57,22 @@ input.code {
   font-weight: 100;
   font-size: 29px;
   padding-top: 200px; }
+
+.menu {
+  position: absolute;
+  right: 20px;
+  top: 20px; }
+  .menu a {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin: 2px;
+    background-repeat: no-repeat; }
+  .menu a.twilions {
+    background-image: url("/img/twilions.png"); }
+  .menu a.users {
+    background-image: url("/img/users.png"); }
+  .menu a.gotime {
+    background-image: url("/img/gotime.png"); }
+  .menu a.kindthings {
+    background-image: url("/img/kindthings.png"); }
