--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,6 +11,11 @@
     %script{ :type => "text/javascript", :src => "/js/register.js"}
   %body
     #wrapper
+      .menu
+        %a.twilions{:href => "/twilions"}
+        %a.users{:href => "/users/"}
+        %a.gotime{:href => "/gotime"}
+        %a.kindthings{:href => "/kindthings"}
       .logo
         babynotify.me
   
