--- a/views/winner.haml
+++ b/views/winner.haml
@@ -1,6 +1,6 @@
 .row
   .large-6.small-12.small-centered.columns
-    %form{:id => "winner", :action => '/winner', :method => 'POST'}
+    %form{:id => "winner", :action => '/score-points', :method => 'POST'}
       %input{:type => "text", :name => "category", :id => "category", :placeholder => "category"}
       %input{:type => "text", :name => "winner", :id => "winner", :placeholder => "winner..."}
           
