--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,22 +2,30 @@ body {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 22px;
   line-height: 24px;
-  background-image: url("/img/bg.gif");
+  background-image: url("/img/curtain.jpg");
   position: absolute;
   min-height: 100%;
+  background-size: 110%;
   width: 100%; }
 
-.leaderboardSource {
-  border-radius:3px;
-  padding: 12px;
-  span {
-    display:inline-block;
-  }
-  span.badge {
-    padding:2px 12px;
-    background:white;
-  }
+.leaderboardSource li {
+  background: white;
+  border-radius: 4px;
+  margin: 6px;
+  width: 50%;
+  list-style: none;
 }
+.leaderboardSource li span {
+  display:inline-block;
+  padding: 8px 18px;
+}
+.leaderboardSource li span.badge {
+  padding: 16px 12px;
+  background: gold;
+  font-size: 32px;
+  border-radius: 4px 0px 0px 4px;
+}
+
 
 .logo {
   text-align: center;
